# tigris-core

./: Cargo.toml  README.md
src/: main.rs
src/features/: mod.rs
src/features/actions/: mod.rs
src/features/api/: mod.rs
src/features/apps/: mod.rs
src/features/extensions/: mod.rs
src/features/indexing/: mod.rs
src/features/paths/: mod.rs
src/features/search/: mod.rs
src/features/search_results/: mod.rs
src/features/settings/: mod.rs
src/features/utils/: mod.rs
