[package]
name = "tigris-core"
version = "1.0.0"
edition = "2021"
license = "MIT"

[dependencies]
dirs = { version = "6.0.0" }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.137"
walkdir = { version = "2.5.0" }
notify-rust = "4.11.4"
postcard = { version = "1.1.1", features = ["alloc"] }

[features]
default = []
extension = []
